# drf-tutorial

./: README.md  pyproject.toml
core/api/: urls.py
core/api/v1/: urls.py  views.py
core/core/: settings.py  urls.py
core/snippets/: models.py  serializers.py  views.py
core/snippets/migrations/: 0001_initial.py  0002_snippet_highlighted_snippet_owner.py
